# real-estate-mcp

./: .flake8  MANIFEST.in  README.md  analyze_roppongi.py  debug_tool.txt  evalGrowthRate.py  fetch_roppongi_data.py  pyproject.toml  pytest.ini  requirements.txt  roppongi_data.json  test_api_direct.py  test_e2e.py
.cursor/: MCP_SETUP.md  MCP_TROUBLESHOOTING.md  mcp-config.json.example
.github/workflows/: ci.yml
examples/legacy/: evalGrowthRate.py
mlit_mcp/: __init__.py  __main__.py  cache.py  http_client.py  mcp_server.py  server.py  settings.py
mlit_mcp/tools/: __init__.py  calculate_unit_price.py  clear_cache.py  compare_areas.py  compare_market_to_land_price.py  detect_outliers.py  fetch_hazard_risks.py  fetch_land_price_points.py  fetch_nearby_amenities.py  fetch_population_trend.py  fetch_safety_info.py  fetch_school_districts.py  fetch_station_stats.py  fetch_transaction_points.py  fetch_transactions.py  fetch_urban_planning_zones.py  generate_area_report.py  get_price_distribution.py  gis_helpers.py  list_municipalities.py  search_by_station.py  summarize_transactions.py
prompt/: PLAN_2.md  PROMPT.md  SPEC.md  api_manual.html  plan.md
tests/: conftest.py  test_cache.py  test_config.py  test_http_client.py  test_logging_stats.py  test_server_boot.py  test_server_stats_tool.py
tests/e2e/: test_server_flow.py
tests/load/: test_concurrency.py
tests/tools/: test_calculate_unit_price.py  test_clear_cache.py  test_compare_areas.py  test_compare_market_to_land_price.py  test_detect_outliers.py  test_fetch_hazard_risks.py  test_fetch_land_price_points.py  (+12 more)
