[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlit-mcp"
version = "0.1.0"
description = "MCP Server for MLIT (Ministry of Land, Infrastructure, Transport and Tourism) Real Estate Information"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Takurot", email = "takuro.t@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "urllib3>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "cachetools>=5.3.3",
    "trio>=0.26.0",
    "mcp>=1.0.0",
    "fastmcp>=2.0.0",
    "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-httpx>=0.20.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
mlit-mcp = "mlit_mcp.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["mlit_mcp"]
